# sitk-cli

./: .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg
.github/workflows/: deploy_and_test.yml
examples/: argument_patterns.py  auto_create_dirs.py  batch_processing.py  create_directories.py  fill_holes.py  generator_functions.py  keyword_only_demo.py  no_input_generator.py  overwrite_protection.py  positional_args.py  pre_processing.py  verbose_logging.py
src/sitk_cli/: __init__.py  batch.py  constants.py  introspection.py  lib.py  make_cli.py  parameters.py  progress.py  utils.py
tests/: example_function.py  test_batch_command.py  test_introspection.py  test_make_cli.py  test_optional_args.py  test_overwrite_protection.py  test_positional_args.py  test_progress.py  test_register_cli.py  test_verbose_mode.py
