[metadata]
name = sitk-cli
version = 0.1.0
description = Wrap SimpleITK functions as command lines
long_description = file: README.md
license = MIT License

[options]
package_dir=
    =src
packages=find:
install_requires =
    makefun
    SimpleITK
    typer

[options.packages.find]
where=src

[options.extras_require]
dev =
    mypy
    pytest
