[metadata]
name = sitk-cli
version = 0.1.0
description = Wrap SimpleITK functions as command lines
long_description = file: README.md
license = MIT License

[options]
package_dir=
    =src
packages=find:
install_requires =
    makefun
    SimpleITK
    typer

[options.packages.find]
where=src

[options.extras_require]
dev =
    mypy
    pytest

[mypy]
disallow_untyped_defs = false
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
strict_equality = true
show_column_numbers = true
show_error_codes = true

[mypy-setuptools,SimpleITK]
ignore_missing_imports = true
